# PlateScope

./: CMakeLists.txt  README.md  main.cpp
FoodWasteMonitor/analysis/: stats_analyzer.cpp  stats_analyzer.h
FoodWasteMonitor/camera/: camera_manager.cpp  camera_manager.h
FoodWasteMonitor/data/: waste_database.cpp  waste_database.h
FoodWasteMonitor/detection/: food_detector.cpp  food_detector.h
FoodWasteMonitor/models/: food_classes.txt
FoodWasteMonitor/training/: model_trainer.cpp  model_trainer.h
FoodWasteMonitor/ui/: user_interface.cpp  user_interface.h
FoodWasteMonitor/utils/: config_loader.cpp  config_loader.h
src/: core.cpp  core.hpp  dnn.cpp  dnn.hpp  features2d.cpp  features2d.hpp  gui.cpp  gui.hpp  imgproc.cpp  imgproc.hpp  main.cpp  ml.cpp  ml.hpp  objdetect.cpp  objdetect.hpp  videoio.cpp  videoio.hpp
